@@ -243,3 +243,21 @@ Here are some URLs that contain useful information about LDAP:
   * Object Identifiers Registry
     http://www.alvestrand.no/harald/objectid/
 
+THANKS
+
+This list maybe not correct. If you notice mistakes of this list, please point out.
+
+* atsu@@metallic.co.jp
+* Akinori MUSHA
+* Akira Yamada
+* Pirmin Kalberer
+* Radek Hnilica
+* Hadmut Danisch
+* Yuuzou Gotou
+* Tilo Sloboda
+* Usa Nakamura
+* Mark Kittisopikul
+* Jan Mikkelsen
+* Adam Doligalski
+* Chris Scharf
+* bidon: Patch.
